# bnode-core

./: .gitignore  .gitmodules  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
LICENSE/: index.html
bnode_core/config/: index.html
bnode_core/data_generation/data_preperation/: index.html
bnode_core/data_generation/introduction/: index.html
bnode_core/data_generation/raw_data_generation/: index.html
bnode_core/filepaths/: index.html
bnode_core/nn/nn_utils/: index.html
bnode_core/nn/vae/: index.html
bnode_core/ode/bnode/bnode/: index.html
bnode_core/ode/bnode/bnode_export/: index.html
bnode_core/ode/node/: index.html
bnode_core/ode/trainer/: index.html
bnode_core/ode/trainer_utils/test_from_mlflow/: index.html
docs/: index.md  reference.md
docs/bnode_core/: config.md  filepaths.md
docs/bnode_core/data_generation/: data_preperation.md  introduction.md  raw_data_generation.md
docs/bnode_core/nn/: nn_utils.md  vae.md
docs/bnode_core/ode/: bnode.md  node.md  trainer.md
docs/bnode_core/ode/bnode/: bnode.md  bnode_export.md
docs/bnode_core/ode/trainer_utils/: test_from_mlflow.md
reference/: index.html
resources/config/: data_generation.yaml  onnx_export_pytest.yaml  train_test_ode.yaml  train_test_ode_pytest.yaml  train_test_vae.yaml
resources/config/nn_model/: bnode_pytest.yaml  bnode_pytest_det.yaml  node_pytest.yaml  pels_vae_linear.yaml
resources/config/pModel/: SHF.yaml  SHF_pytest.yaml
search/: search_index.json
src/bnode_core/: __init__.py  config.py  filepaths.py
src/bnode_core/data_generation/: data_preperation.py  raw_data_generation.py
src/bnode_core/data_generation/utils/: fmu_simulate.py  print_fmu_variable_names.py  test.py  visualize_data.py
src/bnode_core/nn/nn_utils/: capacity_scheduler.py  count_parameters.py  early_stopping.py  kullback_leibler.py  load_data.py  normalization.py
src/bnode_core/nn/vae/: vae_architecture.py  vae_train_test.py
src/bnode_core/ode/: trainer.py
src/bnode_core/ode/bnode/: bnode_architecture.py  bnode_export.py  bnode_modules.py
src/bnode_core/ode/node/: node_architecture.py
src/bnode_core/ode/ode_utils/: initialize_model.py  initialize_w_b.py  mixed_norm_for_torchdiffeq.py  train_to_negative_eigenvalues.py
src/bnode_core/ode/trainer_utils/: copy_not_logged_datasets.py  test_from_mlflow.py
src/bnode_core/plots/timeseries/: common.py  create_ppt.py  plot_dataset.py  plot_error_correlation.py  plot_error_histogram.py  plot_error_over_time.py  plot_gui.py
src/bnode_core/utils/: hydra_mlflow_decorator.py
tests/: test_bnode.py  test_config.py  test_filepaths.py
tests/data_generation/: test_data_generation_and_preperation.py
tests/data_generation/utils/: test_fmu_simulate.py  test_visualize_data.py
tests/nn/: test_vae.py
tests/ode/: test_bnode.py  test_bnode_export.py  test_node.py
