[project]
name = "bnode-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Julius Aka", email = "julius.aka@uni-a.de" }
]
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "torch>=2.7.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.22.0",
]

[project.urls]
Homepage = " "
Documentation = " "
Repository = " "
Issues = " "

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "ty",
    "twine",
    "build",
    "pre-commit",
    "rich",
]

[project.scripts]
# this is a possibility to define commands
modern_python_boilerplate = "modern_python_boilerplate.main:hello_world"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py313"

[tool.coverage.run]
omit = ["tests/*"]
